# RoboOrchardLab

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  convertlmdb2ACT.py  download_challenge_cup_data.py  orchard_config.toml  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.jinja  index.rst
docs/_static/css/: version_switcher.css
docs/_templates/: version_switcher.html
docs/api/: index.rst
docs/api/dataset/: index.rst  mcap.rst
docs/api/models/: index.rst  mixin.rst
docs/api/utils/: index.rst
docs/doc_gen/: __init__.py  autoapi_ext.py  autoapi_patch.py  autodoc_ext.py  index.py
docs/getting_started/: install.rst
docs/model_api_tutorial/: GALLERY_HEADER.rst  nonb-01_basic.py
docs/model_zoo/: index.rst
docs/model_zoo/manipulation/: index.rst  sem.rst
docs/model_zoo/perception/: bip3d.rst
docs/overview/: hook_based_trainer_arch.rst  index.rst  lab_arch.rst
docs/trainer_tutorial/: GALLERY_HEADER.rst  nonb-01_basic_run.py  nonb-02_built_in_hooks.py  nonb-03_custom_hook.py
examples/resnet50_imagenet/: .gitignore  README.md  train.py
projects/aux_think/: README.md  analyze_results.py  infer.py  kill_infer.sh  requirements.txt  run_api.py  run_infer.sh
projects/bip3d_grounding/: .gitignore  README.md  config_bip3d_det.py  train.py
projects/bip3d_grounding/tools/: anchor_bbox3d_kmeans.py  ckpt_rename.py
projects/finegrasp_graspnet1b/: README.md  eval.py  infer.py  train.py
projects/finegrasp_graspnet1b/configs/: base_config.py  config_finegrasp_minkunet.py
projects/pick_place_agent/: README.md  agent_policy.py  deploy_policy.py  deploy_policy.yml  eval.sh  requirements_agent_policy.txt
projects/pick_place_agent/agent_utils/: agent_utils.py  grounding_utils.py  pose_estimation_utils.py  pose_post_process_utils.py  viz_utils.py
projects/pick_place_agent/config/: agent_config.py
projects/pick_place_agent/data/: 000000_meta.json
projects/pick_place_agent/docs/: INSTALL.md
projects/pick_place_agent/finegrasp/: config.py  infer.py
projects/resnet50_imagenet/: README.md  train.py
projects/sem/robotwin/: README.md  config_sem_robotwin.py  robotwin_eval.py  train.py  utils.py
robo_orchard_lab/: __init__.py
robo_orchard_lab/dataset/: collates.py  sampler.py  transforms.py
robo_orchard_lab/dataset/datatypes/: __init__.py  camera.py  geometry.py  joint_state.py  tf_graph.py
robo_orchard_lab/dataset/embodiedscan/: embodiedscan_det_grounding_dataset.py  metrics.py  transforms.py
robo_orchard_lab/dataset/lmdb/: base_lmdb_dataset.py  lmdb_wrapper.py
robo_orchard_lab/dataset/robot/: __init__.py  columns.py  dataset.py  packaging.py  re_packing.py  row_sampler.py
robo_orchard_lab/dataset/robotwin/: close_loop_eval.py  robotwin_lmdb_dataset.py  robotwin_packer.py  transforms.py
robo_orchard_lab/distributed/: utils.py
robo_orchard_lab/envs/: maniskill.py  robotwin.py
robo_orchard_lab/envs/robotwin/: __init__.py  env.py  obs.py
robo_orchard_lab/inference/: __init__.py  basic.py  mixin.py
robo_orchard_lab/inference/processor/: compose.py  identity.py  mixin.py
robo_orchard_lab/metrics/: base.py
robo_orchard_lab/models/: __init__.py  checkpoints.py  mixin.py  torch_model.py
robo_orchard_lab/models/bip3d/: bert.py  feature_enhancer.py  layers.py  spatial_enhancer.py  structure.py
robo_orchard_lab/models/codec/: __init__.py  base.py  normalize.py
robo_orchard_lab/models/layers/: data_preprocessors.py  (+1 more)
robo_orchard_lab/pipeline/: __init__.py  hook_based_trainer.py  mixin.py  trainer.py
robo_orchard_lab/policy/: __init__.py  base.py  evaluator.py  remote.py
robo_orchard_lab/transforms/: base.py  noise.py  normalize.py  padding.py  take.py
robo_orchard_lab/utils/: __init__.py  build.py  env.py  geometry.py  huggingface.py  logging.py  misc.py  path.py  protobuf.py  state.py  torch.py
scm/: requirements.txt
scm/lint/: check_lint.py  code_lint_py.sh
scm/qac/: check_license_header.py  check_mr_title.py
tests/: .coveragerc  Makefile  pytest.ini
tests/test_examples/: conftest.py  test_resnet.py
tests/test_integration/: conftest.py
tests/test_robo_orchard_lab/: conftest.py
(+131 files in other folders)
